--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Imports:
     Rcpp
 LinkingTo: Rcpp
 RoxygenNote: 7.1.1
+URL: https://github.com/RudolfJagdhuber/ExhaustiveSearch
+BugReports: https://github.com/RudolfJagdhuber/ExhaustiveSearch/issues
