Added test set support and MSE performance measure.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,ExhaustiveSearch)
 export(ExhaustiveSearch)
+export(getFeatures)
 export(resultTable)
 importFrom(Rcpp,sourceCpp)
 useDynLib(ExhaustiveSearch, .registration = TRUE)
