--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ S3method(print,ExhaustiveSearch)
 export(ExhaustiveSearch)
 export(getFeatures)
 export(resultTable)
+import(stats)
+importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 useDynLib(ExhaustiveSearch, .registration = TRUE)
