--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(resultTable)
 import(stats)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
+importFrom(utils,capture.output)
 useDynLib(ExhaustiveSearch, .registration = TRUE)
